--- a/CommerceApplication/src/Application.Data/Application.Data.csproj
+++ b/CommerceApplication/src/Application.Data/Application.Data.csproj
@@ -5,6 +5,15 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Migrations\20211227175538_InitalCommerceDb.cs" />
+    <Compile Remove="Migrations\20211227175538_InitalCommerceDb.Designer.cs" />
+    <Compile Remove="Migrations\20211229142426_DeleteBehavior.cs" />
+    <Compile Remove="Migrations\20211229142426_DeleteBehavior.Designer.cs" />
+    <Compile Remove="Migrations\20211229142931_DeleteBehavior.cs" />
+    <Compile Remove="Migrations\20211229142931_DeleteBehavior.Designer.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.22" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="3.1.22">
       <PrivateAssets>all</PrivateAssets>
@@ -15,10 +24,15 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="X.PagedList" Version="8.1.0" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Application.Domain\Application.Domain.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Migrations\" />
   </ItemGroup>
 
 </Project>
