--- a/CommerceApplication/src/Application.Web.UI/Application.Web.UI.csproj
+++ b/CommerceApplication/src/Application.Web.UI/Application.Web.UI.csproj
@@ -20,4 +20,8 @@
     <ProjectReference Include="..\Application.Domain\Application.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\images\" />
+  </ItemGroup>
+
 </Project>
